// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonStyle snapshot by default 1`] = `
.c0 {
  font-family: 'Roboto Bold',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  border-width: 2px;
  font-size: 12px;
  line-height: 26px;
  border-style: solid;
  padding: 0 10px;
  border-radius: 36px;
}

@media (min-width:767px) {
  .c0 {
    font-size: 14px;
    line-height: 28px;
  }
}

<button
  className="c0"
/>
`;

exports[`QualifyButtonStyle snapshot by default 1`] = `
.c0 {
  font-family: 'Roboto Bold',Arial,sans-serif;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  border-width: 2px;
  font-size: 12px;
  line-height: 26px;
  border-style: solid;
  padding: 0 10px;
  border-radius: 36px;
  background-color: rgb(255,255,255);
}

@media (min-width:767px) {
  .c0 {
    font-size: 14px;
    line-height: 28px;
  }
}

<button
  className="c0"
/>
`;
